@@ -31,6 +31,7 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
@@ -149,8 +150,15 @@ public class UserRegistry {
         }
 
         private static boolean canSwitchToUser(String user) {
+            if (getCurrentUserName().equals(user)) {
+                return true;
+            }
+
             try {
-                return new ProcessBuilder("sudo", "--non-interactive", "-u", user, "echo", "ok").start().waitFor() == 0;
+                return new ProcessBuilder(sudoCmd(user, Arrays.asList("echo", "ok")))
+                    .inheritIO() // ensures that we get some hint if sudo prompts/prints something
+                    .start()
+                    .waitFor() == 0;
             } catch (Exception ignore) {
                 return false;
             }
@@ -185,13 +193,28 @@ public class UserRegistry {
             if (!canSwitchToUser) {
                 throw new IllegalStateException(String.format("Cannot run as user %s", username));
             }
+            if (!username.equals(getCurrentUserName())) {
+                // sudo only when required
+                cmd = sudoCmd(username, cmd);
+            }
+            return new ProcessBuilder(cmd);
+        }
+
+        /**
+         * Builds a sudo command from a regular command
+         *
+         * @param user user to run cmd as
+         * @param cmd  original command
+         * @return original command wrapped in a sudo command
+         */
+        private static List<String> sudoCmd(String user, List<String> cmd) {
             List<String> fullCmd = new ArrayList<>();
             fullCmd.add("sudo");
-            fullCmd.add("--non-interactive");
+            fullCmd.add("-n"); // --non-interactive long option might not be always supported
             fullCmd.add("-u");
-            fullCmd.add(username);
+            fullCmd.add(user);
             fullCmd.addAll(cmd);
-            return new ProcessBuilder(fullCmd);
+            return fullCmd;
         }
 
         public boolean canSwitchToUser() {
